# AI-Usage-Tracker

./: .gitignore  NOTICE.txt  PRIVACY.md  README.md  SECURITY.md  SUPPORT.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
scripts/: test_bar_countdown_ring.mjs  test_burn_bars.mjs  test_collapsed_bar.mjs  test_collapsed_bar_color.mjs  test_kimi_code_usage_only.mjs  test_minibar_rounded_edges.mjs  test_minimax_unlimited_rendering.mjs  test_openrouter_pace.mjs  test_overlay_always_on_top.mjs  test_overlay_borderless.mjs  test_overlay_height.mjs  test_overlay_width.mjs  test_popup_close_hit_region.mjs  test_popup_gap_transparency.mjs  test_projection_rendering.mjs  test_provider_order.mjs  test_provider_visibility.mjs  test_refresh_countdown.mjs  test_reset_flash.mjs  test_settings_card_layout.mjs  test_settings_close.mjs  test_stale_threshold.mjs  test_update_frontend_state.mjs  test_update_settings_ui.mjs  test_updater_configuration.mjs  test_weekly_pace.mjs  test_weekly_pace_rendering.mjs
src/: api.ts  bar-summary.ts  burn-bars.ts  globals.d.ts  overlay-height.ts  overlay-width.ts  overlay.tsx  styles.css  (+10 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: alerts.rs  commands.rs  history.rs  main.rs  overlay.rs  scheduler.rs  secrets.rs  tray_tooltip.rs  updates.rs  win32.rs
src-tauri/src/oauth/: claude.rs  codex.rs  grok.rs  kimi.rs  mod.rs  pkce.rs  session.rs
src-tauri/src/providers/: claude.rs  codex.rs  glm.rs  grok.rs  kimi.rs  minimax.rs  mod.rs  openrouter.rs
(+2 files in other folders)
