[package]
name = "ai-usage-tracker"
version = "0.7.73"
description = "AI Usage Tracker"
authors = ["AI Usage Tracker contributors"]
license = "MIT"
repository = "https://github.com/GimpMan/AI-Usage-Tracker"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time", "sync", "fs"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
keyring = { version = "3", features = ["windows-native"] }
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
async-trait = "0.1"
log = "0.4"
env_logger = "0.11"
sha2 = "0.11.0"
base64 = "0.22.1"
getrandom = { version = "0.4.3", features = ["std"] }
url = "2.5.8"
semver = "1"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_Graphics_Gdi", "Win32_Storage_FileSystem"] }
